# winnowdelta

./: .gitattributes  .gitignore  ADOPTION.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml  run-and-filter-feedback-tool.md
.github/workflows/: ci.yml
docs/: configuration.md  known-issues.md  schema.md
src/winnowdelta/: __init__.py  cli.py  django_runner.py
src/winnowdelta/adapters/: __init__.py  _diag.py  _support.py  django_adapter.py  eslint_adapter.py  jest_adapter.py  prettier_adapter.py  pytest_adapter.py  tsc_adapter.py  vitest_adapter.py
src/winnowdelta/core/: __init__.py  adapter.py  baseline.py  config.py  diagnostics.py  engine.py  jest_json.py  junit.py  model.py  output.py  paths.py  runner.py
src/winnowdelta/mcp/: __init__.py  server.py  tools.py
tests/: test_adapters_wiring.py  test_baseline.py  test_check_engine.py  test_cli.py  test_config.py  test_diag_adapters.py  test_diagnostics.py  test_django_runner.py  test_hardening.py  test_jest_json.py  test_junit.py  test_lint_live.py  test_mcp_server.py  test_mcp_tools.py  test_output.py  test_pytest_adapter.py  test_runner.py  test_selection.py  test_vitest_live.py
tests/fixtures/pytest_basic/: pytest.ini  test_sample.py
tests/fixtures/pytest_pass/: test_ok.py
