[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "winnowdelta"
version = "0.0.1"
description = "Run-and-filter feedback tool: executes a project's tests/build/lint and returns only the structured, filtered delta a coding agent needs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dan Benston", email = "dbenston07@gmail.com" }]
keywords = ["testing", "lint", "mcp", "coding-agent", "ci"]
dependencies = []

[project.optional-dependencies]
mcp = [
    "mcp>=1.2",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "mcp>=1.2",
]

[project.scripts]
winnowdelta = "winnowdelta.cli:main"
winnowdelta-mcp = "winnowdelta.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/winnowdelta"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Fixture projects are run as subprocesses by the adapter tests; never collect
# them as part of winnowdelta's own suite.
norecursedirs = ["fixtures"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
packages = ["winnowdelta"]
strict = true
